@@ -1,5 +1,11 @@
 2005-09-24  Derek Price  <derek@ximbiot.com>
 
+	Makefile.am (cvs_SOURCES): Move socket-client.[ch] to...
+	(EXTRA_cvs_SOURCES): ...here to avoid compiling them.
+	* socket-client.c (init_sockaddr), socket-client.h (init_sockaddr):
+	Move to...
+	* client.c (init_sockaddr), client.c (init_sockaddr): ...here.
+
 	* socket-client.c (socket_buffer_input): Avoid overflow problems.
 
 	* socket-client.c: General cleanup.
